--- a/Random/Fart.html
+++ b/Random/Fart.html
@@ -21,7 +21,8 @@
                 <li>Spring</li>
                 <li>In</li>
                 <li>My</li>
-                <li>Step</li>
+                <li>Stpe</li>
             </ul>
+
     </body>
 </html>
