--- a/index.html
+++ b/index.html
@@ -1,14 +1,74 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Shiddle
-        </title>
-    </head>
-    <body>
-        <h1>Ty Cook | Shiddle</h1>
-        <p>shiddle.</p>
-        
-    </body>
-</html>
 
+<head>
+    <title>Ty Cook | Website</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+    <style>
+        /* Base Button Styles */
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: orangered;
+            /* Warning color, you can change this */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        /* Hover Styles */
+        .button:hover {
+            transform: scale(1.1);
+            /* Increase the size on hover */
+            background-color: #FF8C66;
+            /* Change the color on hover if desired */
+        }
+
+        .center-container {
+            display: flex;
+            flex-direction: column;
+            /* Stack items vertically */
+            align-items: center;
+            /* Center items horizontally */
+            text-align: center;
+        }
+
+
+        element::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: 2px solid #fff;
+            /* Border for the circle */
+            border-radius: inherit;
+            box-sizing: border-box;
+            /* Include border in size calculations */
+        }
+
+        h1 {
+            text-align: center;
+            text-emphasis: black;
+        }
+
+        h2 {
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1>Slut Site</h1>
+    <h2> Hmmm... Here is a Button. </h2>
+    <div class="center-container">
+        <button class="button">Click Me Bih</button>
+    </div>
+
+</body>
+
+</html>
