--- a/test.html
+++ b/test.html
@@ -45,6 +45,28 @@
             bottom: 0;
             width: 100%;
         }
+        #lightblue {
+	background-color: lightblue;
+	display: flex;
+	flex-wrap: wrap;
+	width: 500px;
+	padding: 10px;
+	border: 1px solid black;
+}
+
+#pink {
+	background-color: pink;
+	padding: 5px;
+	margin: 5px;
+	width: 100px;
+}
+
+#lightgreen {
+	background-color: lightgreen;
+	padding: 5px;
+	margin: 5px;
+    width: 340px;
+}
     </style>
 </head>
 <body>
@@ -57,6 +79,19 @@
         <p>Bonsai is the art of cultivating miniature trees in small containers. It originated in Japan and has been practiced for centuries. Bonsai trees are known for their beauty, elegance, and tranquility they bring to any space.</p>
         <img src="bonsai.jpg" alt="Bonsai Tree">
     </div>
+
+    <div id="lightblue">
+        <div id="pink">
+            Pink DIV
+        </div>
+    
+        <div id="lightgreen">
+            Lightgreen DIV
+        </div>
+    </div>
+
+
+
     <footer>
         &copy; 2023 Bonsai Garden
     </footer>
